test/spec_vectors/simd_i8x16_arith/fail/module_6.wat
(module (func $i8x16.add-arg-empty (result v128) (i8x16.add)))